deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8status
  namespace: ${DEPLOY_NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8status
  template:
    metadata:
      labels:
        app: k8status
    spec:
      serviceAccountName: role-k8status
      containers:
      - name: k8status
        image: ${REGISTRY}/${IMAGE_NAME}:${VERSION}
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: k8status
  namespace: ${DEPLOY_NAMESPACE}
spec:
  selector:
    app: k8status
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8status-ingress
  namespace: ${DEPLOY_NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Redirect HTTP to HTTPS
spec:
  tls:
  - hosts:
    - ${TLS_HOSTNAME}
    secretName: certs-secret
  rules:
  - host: ${DEPLOY_URL}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8status
            port:
              number: 8080
