ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8status-ingress
  namespace: ${DEPLOY_NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Redirect HTTP to HTTPS
spec:
  tls:
  - hosts:
    - ${TLS_HOSTNAME}
    secretName: certs-secret
  rules:
  - host: ${TLS_HOSTNAME}
    http:
      paths:
      - path: /${PATH_PREFIX}  # Add this if you need a specific path prefix
        pathType: Prefix
        backend:
          service:
            name: k8status
            port:
              number: 80
